# ANTsR

./: .RData  .Rbuildignore  .gitignore  .gitmodules  .travis.yml  006-minimal.html  ANTsR.Rproj  ANTsRGettingStarted.html  ANTsRdemo.html  ANTsRfunctions.html  ANTsRstyleGuide.html  DESCRIPTION  Dockerfile  Makefile  NAMESPACE  NEWS  OLD_NAMESPACE  README.md  README.txt  Rd_Atropos.html  Rd_Comparison.html  Rd_Extract.html  Rd_ImageMath.html  Rd_KellyKapowski.html  Rd_MeasureMinMaxMean.html  Rd_N3BiasFieldCorrection.html  Rd_SmoothImage.html  Rd_ThresholdImage.html  Rd_abpBrainExtraction.html  Rd_abpN4.html  Rd_antsApplyTransforms.html  Rd_antsImage-class.html  Rd_antsImageClone.html  Rd_antsImageRead.html  Rd_antsImageWrite.html  Rd_antsMotionCorr.html  Rd_antsRegistration.html  Rd_antsrimpute.html  Rd_as.antsImage.html  Rd_as.array.html  (+81 more)
.github/: FUNDING.yml
R/: .Rhistory  .getANTsRData.R.swp  .sparseDecom.R.swp  ANTS.R  ANTSIntegrateVectorField.R  ANTSIntegrateVelocityField.R  ANTSJacobian.R  ANTsR-package.R  Atropos.R  AtroposMin.R  AverageAffineTransform.R  AverageImages.R  AverageTensorImages.R  CheckTopology.R  ClusterImageStatistics.R  ComposeMultiTransform.R  ComputeSimilarityMetric.R  ConvertImagePixelType.R  ConvertScalarImageToRGB.R  ConvertToJpg.R  ConvertVectorFieldToVTK.R  CopyImageHeaderInformation.R  CreateDTICohort.R  CreateDisplacementField.R  CreateImage.R  CreateJacobianDeterminantImage.R  CreateWarpedGridImage.R  ExtractDenseNetwork.R  ExtractRegionFromImageByMask.R  ExtractSliceFromImage.R  GetMeshAndTopology.R  ImageCompare.R  ImageMath.R  ImageSetStatistics.R  (+373 more)
src/: AddNoiseToImage.cpp  CMakeCache.txt  CMakeLists.txt  ComposeDisplacementFields.cpp  CreateJacobianDeterminantImage.cpp  FitBSplineDisplacementField.cpp  FitBSplineObjectToScatteredData.cpp  FitThinPlateSplineDisplacementField.cpp  HausdorffDistance.cpp  HistogramMatchImages.cpp  ImageMath.cpp  IntegrateVelocityField.cpp  InvertDisplacementField.cpp  LabelClustersUniquely.cpp  LabelGeometryMeasures.cpp  LabelOverlapMeasures.cpp  Makefile  Makevars  Makevars.in  Makevars.win  MeasureImageSimilarity.cpp  PatchAnalysis.h  PatchAnalysis.hxx  RcppANTsR.cpp  RcppANTsR.h  RcppANTsR_Transform.cpp  RcppANTsR_Transform.h  ResampleImage.cpp  ResampleImageBySpacing.cpp  SimulateBSplineDisplacementField.cpp  SimulateExponentialDisplacementField.cpp  ThresholdImage.cpp  antsApplyTransforms.cpp  antsApplyTransformsToPoints.cpp  antsBinaryThresholdImageFilter.cpp  antsImage.cpp  antsImageClone.cpp  antsImageHeaderInfo.cpp  antsImageIterator.cpp  antsImageMutualInformation.cpp  (+40 more)
src/ANTsR/ANTsR-src/: CMakeLists.txt
src/ANTsR/ANTsR-src/include/: ANTS_affine_registration.h  ANTS_affine_registration2.h  BinaryImageToMeshFilter.h  ReadWriteImage.h  TensorFunctions.h  antsAtroposSegmentationImageFilter.h  antsAtroposSegmentationImageFilter.hxx  antsBoxPlotQuantileListSampleFilter.h  antsBoxPlotQuantileListSampleFilter.hxx  antsCommandLineParser.h  antsGaussianListSampleFunction.h  antsGaussianListSampleFunction.hxx  antsGrubbsRosnerListSampleFilter.h  antsGrubbsRosnerListSampleFilter.hxx  antsHistogramParzenWindowsListSampleFunction.h  antsHistogramParzenWindowsListSampleFunction.hxx  antsJointHistogramParzenShapeAndOrientationListSampleFunction.h  antsJointHistogramParzenShapeAndOrientationListSampleFunction.hxx  antsJointHistogramParzenWindowsListSampleFunction.h  antsJointHistogramParzenWindowsListSampleFunction.hxx  antsListSampleFunction.h  antsListSampleFunction.hxx  antsListSampleToListSampleFilter.h  antsListSampleToListSampleFilter.hxx  antsLogEuclideanGaussianListSampleFunction.h  antsLogEuclideanGaussianListSampleFunction.hxx  antsManifoldParzenWindowsListSampleFunction.h  antsManifoldParzenWindowsListSampleFunction.hxx  antsMatrixUtilities.h  antsMatrixUtilities.hxx  antsPartialVolumeGaussianListSampleFunction.h  antsPartialVolumeGaussianListSampleFunction.hxx  antsPassThroughListSampleFilter.h  antsPassThroughListSampleFilter.hxx  antsSCCANObject.h  antsSCCANObject.hxx  itkANTSAffine3DTransform.hxx  itkANTSCenteredAffine2DTransform.hxx  itkANTSImageRegistrationOptimizer.cxx  itkANTSImageRegistrationOptimizer.h  (+86 more)
src/ANTsR/ANTsR-src/include/Temporary/: itkAddConstantToImageFilter.h  itkDijkstrasAlgorithm.h  itkDivideByConstantImageFilter.h  itkFEMConformalMap.h  itkFEMDiscConformalMap.h  itkFEMElement3DC0LinearTriangular.h  itkFEMElement3DC0LinearTriangularLaplaceBeltrami.h  itkFEMElement3DC0LinearTriangularMembrane.h  itkFEMElement3DMembrane1DOF.h  itkFEMElement3DMembrane1DOF.hxx  itkFastMarchingImageFilter.h  itkFastMarchingImageFilter.hxx  itkManifoldIntegrationAlgorithm.h  topological_numbers.h
src/ANTsR/ANTsR-src/src/: ANTS.cxx  ANTSConformalMapping.cxx  ANTSIntegrateVectorField.cxx  ANTSIntegrateVelocityField.cxx  ANTSJacobian.cxx  ANTSUseDeformationFieldToGetAffineTransform.cxx  ANTSUseLandmarkImagesToGetAffineTransform.cxx  Atropos.cxx  AtroposMin.cxx  AverageAffineTransform.cxx  AverageImages.cxx  AverageTensorImages.cxx  CheckTopology.cxx  ClusterImageStatistics.cxx  ComposeMultiTransform.cxx  ComputeSimilarityMetric.cxx  ConformalMapping.cxx  ConvertImagePixelType.cxx  ConvertScalarImageToRGB.cxx  ConvertToJpg.cxx  ConvertVectorFieldToVTK.cxx  CopyImageHeaderInformation.cxx  CreateDTICohort.cxx  CreateDisplacementField.cxx  CreateImage.cxx  CreateJacobianDeterminantImage.cxx  CreateWarpedGridImage.cxx  ExtractRegionFromImage.cxx  ExtractRegionFromImageByMask.cxx  ExtractSliceFromImage.cxx  GetMeshAndTopology.cxx  ImageCompare.cxx  ImageMath.cxx  ImageSetStatistics.cxx  KellyKapowski.cxx  KellySlater.cxx  LabelClustersUniquely.cxx  LabelGeometryMeasures.cxx  LabelOverlapMeasures.cxx  LaplacianThickness.cxx  (+45 more)
src/ITKIOFactoryRegistration/: itkImageIOFactoryRegisterManager.h  itkTransformIOFactoryRegisterManager.h
src/include/: antsCommandLineOption.h  itkANTSAffine3DTransform.h  itkANTSAffine3DTransform.hxx  itkANTSCenteredAffine2DTransform.h  itkANTSCenteredAffine2DTransform.hxx
src/m4/: ax_cxx_compile_stdcxx_11.m4  vcl_cxx_static_const_init_float.m4
src/src/: antsRegistration.cxx
(+1386 files in other folders)
